# Convertertron3000

./: converter_tron.py  main.py  pyproject.toml
docs/: ideas.txt
